<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">module_xj</string>
    <string name="xj_task">巡检任务</string>
    <string name="xj_temp_task">临时巡检</string>
    <string name="xj_widget_get">未下发</string>
    <string name="xj_widget_uncheck">已下发</string>
    <string name="xj_widget_done">待上传</string>
    <string name="xj_widget_cancel">已取消</string>
    <string name="xj_task_list">巡检管理</string>
    <string name="xj_work">巡检作业</string>
    <string name="xj_work_finish">已完成巡检项</string>
    <string name="xj_device_begintime">点检开始时间</string>
    <string name="xj_device_personnel">点检人员</string>
    <string name="xj_device_workname">任务名称</string>
    <string name="input_work_name">请输入任务名称</string>
    <string name="xj_device_begin">开始点检</string>
    <string name="xj_work_view">巡检明细</string>
    <string name="xj_total">巡检汇总</string>
    <string name="xj_task_total">巡检任务</string>
    <string name="xj_task_uncheck">待检</string>
    <string name="xj_task_checked">已检</string>
    <string name="xj_task_running">进行中</string>
    <string name="xj_task_download">获取任务</string>
    <string name="xj_task_upload">上传任务</string>
    <string name="xj_task_get">获取任务</string>
    <string name="xj_task_get_warning1">没有巡检任务</string>
    <string name="xj_task_get_warning2">请先选择要获取的巡检任务时间段！</string>
    <string name="xj_task_geting">正在获取巡检任务...</string>
    <string name="xj_task_uploading">正在上传巡检任务...</string>
    <string name="xj_task_start">开始</string>
    <string name="xj_task_end">结束</string>
    <string name="xj_task_submit">提交</string>
    <string name="xj_task_finish_warning1">还存在未完成的巡检项，确定是否结束任务？</string>
    <string name="xj_task_finish_warning2">确定结束任务？</string>
    <string name="xj_task_finish_toast1">正在保存数据到待上传...</string>
    <string name="xj_task_finish_toast2">任务已结束</string>
    <string name="xj_task_submit_now">正在提交数据...</string>
    <string name="xj_area_empty_warning">该任务没有区域数据，请前往数据管理同步巡检基础数据。</string>
    <string name="xj_data_empty_warning">未找到巡检基础数据，请前往数据管理同步巡检基础数据。</string>
    <string name="xj_area_sign_warning1">任务未开始，请先点开始按钮</string>
    <string name="xj_area_sign_warning2">任务没有区域信息，请先到数据管理模块同步基础数据</string>
    <string name="xj_device_content_already">巡检内容已在列表中</string>
    <string name="xj_device_work_empty">"该设备下没有巡检内容"</string>
    <string name="xj_device_work_query_empty">"未查询到该设备的巡检任务"</string>
    <string name="xj_device_please_inputname">"请输入任务名称"</string>
    <string name="xj_device_please_select_user">"请选择巡检人员"</string>

    <string name="xj_device_local_empty">"本地暂无巡检记录"</string>
    <string name="xj_device_scan_again">"没有可提交的巡检项,是否重新扫描"</string>
    <string name="xj_device_continue_submit">"当前设备有未完成的巡检项，是否继续提交?"</string>
    <string name="xj_device_submit_content_empty">"当前设备没有可提交的巡检内容"</string>
    <string name="xj_area_process">%1s / %2s</string>
    <string name="xj_work_input_hint">请输入检查结果</string>
    <string name="xj_work_eam_tag">设备</string>
    <string name="xj_work_eam_all">全部设备</string>
    <string name="xj_work_eam_check">设备点检</string>
    <string name="xj_work_eam_check_record">点检记录</string>
    <string name="xj_work_conclusion_normal">正常</string>
    <string name="xj_work_remark_title">备注</string>
    <string name="xj_work_unfinish_warning">巡检内容“%1s”的巡检项没有数据!</string>
    <string name="xj_work_skip_toast">成功跳过%1s巡检项！</string>
    <string name="xj_work_temp_test">测温</string>
    <string name="xj_work_temp_test_warning">未启用测温，请前往设置开启！</string>
    <string name="xj_work_vib_test">测振</string>
    <string name="xj_work_vib_test_warning">未启用测振，请前往设置开启！</string>
    <string name="xj_work_finish_warning1">是否完成该设备全部巡检项？</string>
    <string name="xj_work_finish_warning2">是否完成该区域全部巡检项？</string>
    <string name="xj_work_finish_warning3">列表无巡检数据！</string>

    <string name="xj_work_view_redo_warning">是否重录数据？</string>
    <string name="xj_work_view_redo_unable">该巡检项不允许重录!</string>

    <string name="xj_temp_task_exit_warning">已选择巡检内容，是否取消任务？</string>
    <string name="xj_temp_task_exit_warning2">确定离开？</string>
    <string name="xj_work_jump_all">是否一键跳过全部巡检项？</string>
    <string name="xj_work_over_all">是否完成全部巡检项？</string>
    <string name="xj_work_over">一键完成</string>
    <string name="xj_work_jump">一键跳过</string>
<!--    <string name="xj_patrol_upload_task">确定上传该区域任务？</string>-->
<!--    <string name="xj_patrol_upload">巡检数据上传失败！</string>-->
<!--    <string name="xj_patrol_upload_succeed">上传成功</string>-->
    <string name="xj_upload_task">上传任务</string>
    <string name="xj_patrol_no_device_look">无设备详情可查看！</string>
    <string name="xj_patrol_give_photo_method">请选择获取照片的方式</string>
    <string name="xj_patrol_number_type">请输入数字类型</string>
    <string name="xj_patrol_device_hint">设备启动测温异常，请检查设备配置测温模块</string>
    <string name="xj_patrol_temp_value">测温值</string>
    <string name="xj_patrol_shock_value">测振值</string>
    <string name="xj_patrol_check">请输入检查结果</string>
    <string name="xj_patrol_number">请输入数值</string>
    <string name="xj_patrol_input_text">请输入文本</string>
    <string name="xj_patrol_result">结果将四舍五入保留</string>
    <string name="xj_patrol_local">位</string>
    <string name="xj_patrol_range">正常范围转化数字异常！</string>
    <string name="xj_patrol_jump_check">跳检</string>
    <string name="xj_patrol_route_selete">巡检路线选择</string>
    <string name="xj_patrol_uhf_succeed">超高频初始化成功！</string>
    <string name="xj_patrol_uhf_fail">超高频初始化失败！</string>
    <string name="xj_patrol_sure">确定</string>
    <string name="xj_patrol_cancel">取消</string>
    <string name="xj_patrol_reason">签到原因为空，请退出页面重新加载</string>
    <string name="xj_patrol_upload">巡检数据上传失败！</string>
    <string name="xj_patrol_open_device_hint">正在初始化，请确保设备打开（黄灯闪烁）;绿灯即可开启测温</string>
    <string name="xjj_patrol_service_start">服务已启动</string>
    <string name="xj_patrol_xj_content">巡检内容“</string>
    <string name="xj_patrol_input_result">”需要填写结果</string>
    <string name="xj_patrol_take_photo">”需要拍照</string>
    <string name="xj_patrol_over">操作完成</string>
    <string name="xj_patrol_operater_fail">完成操作失败！</string>
    <string name="xj_patrol_jump_xj">没有可以跳过的巡检项！</string>
    <string name="xj_patrol_save_continue">保存继续扫描</string>
    <string name="xj_patrol_finish_work">完成点检任务</string>
    <string name="xj_patrol_no_result">无结果候选值</string>
    <string name="xj_patrol_device_operate">设备就绪，可按下测温按钮</string>
    <string name="xj_patrol_temperature">正在测温</string>
    <string name="xj_patrol_upload_task">确定上传该区域任务？</string>
    <string name="xj_patrol_upload_succeed">上传成功</string>
    <string name="xj_patrol_router_name">化工巡检线路1</string>
    <string name="xj_patrol_status">待检</string>
    <string name="xj_patrol_start">开始</string>
    <string name="xj_patrol_get_task">获取任务</string>
    <string name="xj_patrol_item_router_name">化工巡检线路1</string>
    <string name="xj_patrol_item_status">待检</string>
    <string name="xj_patrol_device_name">设备11</string>
    <string name="xj_patrol_switch">是|否</string>
    <string name="xj_patrol_remark">备注</string>
    <string name="xj_patrol_yh_name">录隐患</string>
    <string name="xj_patrol_xj_local">区域巡检</string>
    <string name="xj_patrol_deivce_key">设备</string>
    <string name="xj_patrol_cw_status">测温仪状态:</string>
    <string name="xj_patrol_temp">温度：</string>
    <string name="xj_patrol_start_service">开启服务</string>
    <string name="xj_patrol_close">关闭</string>
    <string name="xj_patrol_input_remark">填写备注</string>
    <string name="xj_patrol_test_str">测测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据测试长数据试长数据</string>
    <string name="xj_patrol_upload_size_warning">上传的巡检数据文件大于100MB，请重新处理数据上传！</string>
    <string name="xj_patrol_area_inspection">区域巡检</string>
    <string name="xj_patrol_no_device">无设备巡检</string>
    <string name="xj_patrol_multi_choose_list">多选列表</string>
    <string name="xj_patrol_no_route">未找到巡检线路，请检查基础数据！</string>
    <string name="xj_patrol_code_not_match">签到码不匹配</string>
    <string name="operate_succeed">操作成功</string>
    <string name="xj_patrol_upload_time_out">一次性上传任务过大，请批量进行上传</string>
    <string name="xj_no_allow_delay">不允许巡检延后</string>
    <string name="xj_no_allow_advance">不允许巡检提前</string>
    <string name="hour_begins">小时开始</string>
    <string name="hour_end">小时结束</string>
    <string name="uploaded">已上传</string>
</resources>
