<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/sh_white_stroke"
    android:paddingBottom="@dimen/dp_10"
    >


    <include layout="@layout/ly_widget_title"/>
    <include layout="@layout/ly_line_light_light" android:layout_marginTop="@dimen/dp_30" android:layout_height="@dimen/dp_1" android:layout_width="match_parent" android:layout_marginRight="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:paddingBottom="@dimen/dp_10"
        >
        <ImageView
            android:layout_width="118dp"
            android:layout_height="82dp"
            android:src="@drawable/pic_widget_patrol"
            android:scaleType="centerInside"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:id="@+id/widgetXJTaskPic"
            android:tag="widgetXJTaskPic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/widgetXJTaskPic"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:orientation="horizontal"
                android:id="@+id/widgetXJTaskNewLayout"
                android:tag="widgetXJTaskNewLayout"
                >
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:text="@string/xj_widget_get"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/xjTitleColor"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskNewNum"
                    android:text="0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical|right"
                    android:textColor="#FFB354"
                    android:tag="taskNewNum" />
            </LinearLayout>
            <include layout="@layout/ly_line_light"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:id="@+id/taskExecuteLayout"
                android:tag="taskExecuteLayout">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/xj_widget_uncheck"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/xjTitleColor"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskExecuteNum"
                    android:text="0"
                    android:gravity="center_vertical|right"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FF807A"
                    android:tag="taskExecuteNum" />
            </LinearLayout>
            <include layout="@layout/ly_line_light"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:id="@+id/taskDoneLayout"
                android:tag="taskDoneLayout">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/xj_widget_done"
                    android:textColor="@color/xjTitleColor"
                    android:gravity="center"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/taskDoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:tag="taskDoneNum"
                    android:text="0"
                    android:textColor="#00C482"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <include layout="@layout/ly_line_light"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>