<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sl_white_press"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10"
    android:paddingTop="@dimen/dp_5"
    android:paddingBottom="@dimen/dp_5">
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/itemXJWorkFlag"
        android:layout_marginTop="@dimen/dp_5"
        android:tag="itemXJWorkFlag"
        android:src="@drawable/ic_xj_work_flag"
        android:visibility="gone"
        />

    <com.supcon.mes.middleware.ui.view.search.CustomPopTextView
        android:id="@+id/itemXJWorkContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_toStartOf="@+id/itemXJWorkFold"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_toEndOf="@+id/itemXJWorkFlag"
        app:key_width="0dp"
        app:content_color="@color/xjTitleColor"
        android:gravity="center_vertical"
        android:maxLines="3"
        android:tag="itemXJWorkContent"
        android:textColor="@color/xjTitleColor"
        android:textSize="@dimen/fontSize_14sp" />


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_xj_work_unfold"
        android:id="@+id/itemXJWorkFold"
        android:tag="itemXJWorkFold"
        android:layout_alignParentRight="true"
        android:scaleType="center"
        />
    <include layout="@layout/ly_line_light" android:layout_below="@+id/itemXJWorkContent" android:layout_height="@dimen/dp_1"
        android:layout_width="match_parent" android:layout_marginTop="@dimen/dp_8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@+id/itemXJWorkContent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_5"
        android:id="@+id/itemXJWorkResultLayout"
        android:tag="itemXJWorkResultLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginRight="@dimen/dp_10"
            >
<!--            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:hint="@string/xj_work_input_hint"
                android:background="@null"
                android:textSize="14sp"
                android:textColor="@color/xjTextColor"
                android:textColorHint="@color/xjHintColor"
                android:maxLines="2"
                android:gravity="center_vertical"
                android:id="@+id/itemXJWorkResultInput"
                android:tag="itemXJWorkResultInput" />-->
            <com.supcon.mes.mbap.view.CustomEditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                app:edit_hint="@string/xj_work_input_hint"
                app:text_width="0dp"
                app:text_size="14"
                app:text_color="@color/xjTextColor"
                app:edit_maxLine="2"
                app:gravity="center_vertical"
                android:id="@+id/itemXJWorkResultInput"
                android:tag="itemXJWorkResultInput"
                app:icon_visible="false"
                />
            <Spinner
                android:id="@+id/itemXJWorkResultSpinner"
                android:tag="itemXJWorkResultSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/sh_xj_work_spinner_drop_down_blue"
                android:visibility="gone"
                />
            <com.supcon.mes.mbap.view.CustomSpinner
                android:id="@+id/itemXJWorkResultMultiSelect"
                android:tag="itemXJWorkResultMultiSelect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:text_width="0dp"
                app:necessary="true"
                app:text=""
                app:text_size="14"
                app:icon_res="@drawable/ic_xj_multi_check"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/hintColor"
                android:textSize="10sp"
                android:id="@+id/itemXJWorkResultUnit"
                android:tag="itemXJWorkResultUnit"
                android:visibility="gone"
                android:gravity="center"
                android:padding="@dimen/dp_3"
                />
            <com.supcon.mes.middleware.ui.view.SimpleSwitchView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                app:values="@string/xj_patrol_switch"
                app:text_width="0dp"
                android:id="@+id/itemXJWorkResultSwitch"
                android:tag="itemXJWorkResultSwitch"
                android:visibility="gone"
                android:layout_gravity="center"
                />



        </LinearLayout>
        <include layout="@layout/ly_vertical_line"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_marginRight="@dimen/dp_3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_centerVertical="true"
            android:id="@+id/itemXJWorkConclusionSpinner"
            android:tag="itemXJWorkConclusionSpinner"
            android:prompt="@string/xj_work_conclusion_normal"
            android:background="@drawable/sh_xj_work_spinner_drop_down_blue"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/itemXJWorkBtnLayout"
            android:tag="itemXJWorkBtnLayout">
            <include layout="@layout/ly_vertical_line"/>
            <Button
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textColor="@color/xjBtnColor"
                android:layout_marginLeft="@dimen/dp_5"
                android:textSize="@dimen/fontSize_14sp"
                android:paddingLeft="@dimen/dp_5"
                android:text="@string/xj_work_vib_test"
                android:gravity="center_vertical"
                android:id="@+id/itemXJWorkVibBtn"
                android:drawableLeft="@drawable/ic_xj_work_vib"
                android:drawablePadding="@dimen/dp_5"
                android:tag="itemXJWorkVibBtn"
                android:background="@drawable/sl_transparent_press_no_stroke"
                android:visibility="gone"
                />
            <Button
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textColor="@color/xjBtnColor"
                android:layout_marginLeft="@dimen/dp_10"
                android:textSize="@dimen/fontSize_14sp"
                android:paddingLeft="@dimen/dp_5"
                android:text="@string/xj_work_temp_test"
                android:gravity="center_vertical"
                android:id="@+id/itemXJWorkTempBtn"
                android:drawableLeft="@drawable/ic_xj_work_temp"
                android:drawablePadding="@dimen/dp_5"
                android:tag="itemXJWorkTempBtn"
                android:background="@drawable/sl_transparent_press_no_stroke"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemXJWorkMoreLayout"
        android:tag="itemXJWorkMoreLayout"
        android:layout_below="@+id/itemXJWorkResultLayout"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_5"
        android:visibility="gone"
        >
        <include layout="@layout/ly_line_light_light"/>

        <com.supcon.mes.mbap.view.CustomGalleryView
            android:id="@+id/itemXJWorkPics"
            android:tag="itemXJWorkPics"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_3"
            app:columns="3"
            app:editable="true"
            app:icon_visible="false"
            app:text_height="0dp" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#88626262"
            android:src="@drawable/sl_top_more"
            android:id="@+id/itemXJWorkPicMoreView"
            android:tag="itemXJWorkPicMoreView"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/dp_2"
            android:scaleType="centerInside"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/itemXJWorkPics"
            android:gravity="center_vertical"
            >
            <com.supcon.mes.mbap.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemXJWorkRemarkInput"
                android:tag="itemXJWorkRemarkInput"
                android:layout_marginTop="5dp"
                app:text_width="0dp"
                app:text_color="@color/xjTextColor"
                app:text_size="14"
                app:max_lines="2"
                app:editable="false"
                android:gravity="center_vertical"
                android:layout_marginRight="110dp"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textColor="@color/xjBtnColor"
                android:textSize="@dimen/fontSize_14sp"
                android:text="@string/xj_patrol_remark"
                android:gravity="center_vertical"
                android:id="@+id/itemXJWorkRemarkBtn"
                android:drawableLeft="@drawable/ic_xj_work_remark"
                android:drawablePadding="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:tag="itemXJWorkRemarkBtn"
                android:background="@drawable/sl_transparent_press_no_stroke"
                android:visibility="visible"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/itemXJWorkCameraBtn"
                />

            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:textColor="@color/xjBtnColor"
                android:textSize="@dimen/fontSize_14sp"
                android:text="@string/xj_patrol_yh_name"
                android:gravity="center_vertical"
                android:id="@+id/itemXJWorkYHBtn"
                android:drawableLeft="@drawable/ic_xj_work_yh"
                android:drawablePadding="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:tag="itemXJWorkYHBtn"
                android:background="@drawable/sl_transparent_press_no_stroke"
                android:visibility="gone"
                android:layout_toLeftOf="@+id/itemXJWorkRemarkBtn"
                android:layout_centerVertical="true"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/itemXJWorkCameraBtn"
                android:src="@drawable/sl_xj_work_camera"
                android:tag="itemXJWorkCameraBtn"
                android:background="@drawable/sl_transparent_press_no_stroke"
                android:layout_alignParentRight="true"
                android:scaleType="fitCenter"
                android:padding="@dimen/dp_7"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>